@@ -54,27 +54,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|HashMap
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|List
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
 import|;
 end_import
 
@@ -184,26 +164,6 @@ specifier|private
 specifier|final
 name|Credentials
 name|credentials
-decl_stmt|;
-DECL|field|cache
-specifier|private
-specifier|final
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|CredentialEntry
-argument_list|>
-name|cache
-init|=
-operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|CredentialEntry
-argument_list|>
-argument_list|()
 decl_stmt|;
 DECL|method|UserProvider ()
 specifier|private
@@ -443,13 +403,6 @@ name|this
 argument_list|)
 throw|;
 block|}
-name|cache
-operator|.
-name|remove
-argument_list|(
-name|name
-argument_list|)
-expr_stmt|;
 block|}
 annotation|@
 name|Override
